[package]
name = "rp2040-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4.2"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
rp2040-pac = { version = "0.3.0", features = ["rt"] }
